--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,17 +1,42 @@
-body{
+body {}
 
+.contenedor-app{
+    padding-bottom: 100px;
 }
 
-.cartas-libros{
-    -webkit-box-shadow: 2px 0px 7px 0px rgba(0, 0, 0, 0.47);
-    -moz-box-shadow: 2px 0px 7px 0px rgba(0, 0, 0, 0.47);
-    box-shadow: 2px 0px 7px 0px rgba(0, 0, 0, 0.47);
+.cartas-libros {
+    transition: box-shadow 0.1s;
+    border:none;
 }
 
-.titulo{
+.cartas-libros:hover {
+    -webkit-box-shadow: 0px 0px 13px 4px rgb(138, 138, 138);
+    -moz-box-shadow: 0px 0px 13px 4px rgb(138, 138, 138);
+    box-shadow: 0px 0px 13px 4px rgb(138, 138, 138);
+}
+.btn-catalogo-l{
+    background-color: #ee6e73;
+    border:none;
+    border-radius: 0px;
+    color: white;
+}
+.btn-catalogo-l:hover{
+    background-color: #ec383e;
+    -webkit-box-shadow: -2px 3px 7px 0px rgb(113, 113, 113);
+    -moz-box-shadow: -2px 3px 7px 0px rgb(113, 113, 113);
+    box-shadow: -2px 3px 7px 0px rgb(113, 113, 113);
+    color: white;
+}
+
+.btn-catalogo-l{
+    background-color: #ee6e73;
+    border:none;
+    border-radius: none;
+}
+.titulo {
     font-family: 'Pacifico', cursive;
 }
 
-.titulo-libros{
+.titulo-libros {
     font-family: 'Roboto', sans-serif;
 }
